// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model Users {
  id         String   @id @default(uuid())
  name       String   @db.VarChar(100)
  username   String   @unique @db.VarChar(100)
  email      String   @unique @db.VarChar(100)
  password   String   @db.VarChar(100)
  user_type  UserType
  notify     Notify[]
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  administrators  Administrator?
  customers       Customer?
  eventOrganizers EventOrganizer?
}

model Administrator {
  id      Int    @id @default(autoincrement())
  user_id String @unique

  user Users @relation(fields: [user_id], references: [id])
}

model Customer {
  id      Int      @id @default(autoincrement())
  user_id String   @unique
  ticket  Ticket[]

  user Users @relation(fields: [user_id], references: [id])
}

model EventOrganizer {
  id                Int      @id @default(autoincrement())
  user_id           String   @unique
  organization_name String
  verified          Boolean  @default(false)
  created_at        DateTime @default(now())
  updated_at        DateTime @updatedAt
  events            Event[]

  user Users @relation(fields: [user_id], references: [id])
}

model Category {
  id            Int      @id @default(autoincrement())
  category_name String   @db.VarChar(50)
  created_at    DateTime @default(now())
  updated_at    DateTime @updatedAt
  events        Event[]
}

model Event {
  id           Int      @id @default(autoincrement())
  title        String   @db.VarChar(100)
  description  String?  @db.VarChar(255)
  start_date   DateTime
  end_date     DateTime
  ticket_total Int      @default(0)
  location     String
  category_id  Int
  organizer_id Int
  verified     Boolean
  city_id      Int
  price        Int      @default(0)
  created_at   DateTime @default(now())
  updated_at   DateTime @updatedAt
  tickets      Ticket[]

  city      City           @relation(fields: [city_id], references: [id])
  organizer EventOrganizer @relation(fields: [organizer_id], references: [id])
  category  Category       @relation(fields: [category_id], references: [id])
}

model Ticket {
  id          Int      @id @default(autoincrement())
  quantity    Int
  customer_id Int
  event_id    Int
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt
  event       Event    @relation(fields: [event_id], references: [id])
  customer    Customer @relation(fields: [customer_id], references: [id])
}

model Province {
  id         Int      @id @default(autoincrement())
  name       String
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt
  city       City[]
}

model City {
  id          Int      @id @default(autoincrement())
  province_id Int
  name        String
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt
  Province    Province @relation(fields: [province_id], references: [id])
  event       Event[]
}

model Notify {
  id         Int      @id @default(autoincrement())
  message    String
  user_id    String
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt
  users      Users    @relation(fields: [user_id], references: [id])
}

enum UserType {
  ADMIN
  CUSTOMER
  EVENTORGANIZER
}
